# happy_project_wasm_core

./: Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: rust.yml
src/: main.rs
