[package]
name = "happy_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = { version = "0.9.1", default-features = false }
wasm-bindgen = "0.2.79"
wasm-bindgen-futures = "0.4.29"
gloo-utils = "0.1.2"
yew = { version = "0.19.3" }
web-sys = { version = "0.3.56", features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
] }
